[gd_scene load_steps=8 format=2]

[ext_resource path="res://videos/kronenberg_gameover_final.ogv" type="VideoStream" id=1]
[ext_resource path="res://rooms/GameOverScene.gd" type="Script" id=2]
[ext_resource path="res://sprites/Anmerkung 2020-04-21 010416.png" type="Texture" id=3]
[ext_resource path="res://fonts/heavy_fontdata.tres" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/ui/restart_button.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/V.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[node name="GameOverScene" type="Node2D"]
script = ExtResource( 2 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
stream = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 480, 265 )
scale = Vector2( 0.805224, 0.805224 )
texture = ExtResource( 3 )

[node name="SecondsAliveLabel" type="Label" parent="."]
visible = false
margin_left = 488.0
margin_top = 376.0
margin_right = 752.0
margin_bottom = 412.0
custom_fonts/font = SubResource( 1 )
text = "1000 seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 384.0
margin_top = 440.0
margin_right = 584.0
margin_bottom = 480.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="V" type="Sprite" parent="."]
position = Vector2( 653.5, 332.75 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 6 )
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
